src/objects/CS_Profile_Id__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>*** Service Custom Setting to store Profiles Ids *****</description>
    <fields>
        <fullName>CS_Customer_Profile_18__c</fullName>
        <label>GW Customer Profile 18</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Customer_Profile__c</fullName>
        <label>GW Customer Community</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Integration_Profile_18__c</fullName>
        <label>GW Integration Profile 18</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Integration_Profile__c</fullName>
        <label>GW Integration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Partner_Profile_18__c</fullName>
        <label>GW Partner Profile 18</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Partner_Profile__c</fullName>
        <description>Partner Profile</description>
        <label>GW Partner Community</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Service_Profile_18__c</fullName>
        <label>GW Service Profile 18</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Services_Profile__c</fullName>
        <label>GW Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Services_PSA_18__c</fullName>
        <label>GW Services - PSA 18</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Services_PSA__c</fullName>
        <label>GW Services - PSA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Services_Platform_User_18__c</fullName>
        <label>GW Services Platform User 18</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Services_Platform_User__c</fullName>
        <label>GW Services Platform User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Standard_PSA_18__c</fullName>
        <label>GW Standard - PSA 18</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Standard_PSA__c</fullName>
        <label>GW Standard - PSA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>GW Profile Id</label>
</CustomObject>